adaptando MainFrame para o cadastro de empresas